// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders correctly 1`] = `
<DocumentFragment>
  .cache-j9vddm-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
}

.cache-j9vddm-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d4dae7;
}

<div
    class="cache-j9vddm-TabsContainer e1h41e5k0"
    role="tablist"
  />
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs and last disabled 1`] = `
<DocumentFragment>
  .cache-j9vddm-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
}

.cache-j9vddm-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d4dae7;
}

.cache-1uai6yj-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #b2b6c3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-case: none;
}

.cache-1uai6yj-StyledTabButton:hover,
.cache-1uai6yj-StyledTabButton:active,
.cache-1uai6yj-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1uai6yj-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1uai6yj-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1uai6yj-StyledTabButton[aria-selected='true'] .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd2,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd2,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='true'],
.cache-1uai6yj-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-j9vddm-TabsContainer e1h41e5k0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      Second
    </button>
    <button
      aria-disabled="true"
      aria-label="2"
      aria-selected="true"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      disabled=""
      role="tab"
    >
      Very long tab name
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs menu selected 1`] = `
<DocumentFragment>
  .cache-j9vddm-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
}

.cache-j9vddm-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d4dae7;
}

.cache-1uai6yj-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #b2b6c3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-case: none;
}

.cache-1uai6yj-StyledTabButton:hover,
.cache-1uai6yj-StyledTabButton:active,
.cache-1uai6yj-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1uai6yj-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1uai6yj-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1uai6yj-StyledTabButton[aria-selected='true'] .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd2,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd2,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='true'],
.cache-1uai6yj-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-p9r4bv-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #b2b6c3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-case: none;
}

.cache-p9r4bv-StyledTabButton-StyledMenu:hover,
.cache-p9r4bv-StyledTabButton-StyledMenu:active,
.cache-p9r4bv-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-p9r4bv-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-p9r4bv-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-p9r4bv-StyledTabButton-StyledMenu[aria-selected='true'] .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover .e1ej5pcd2,
.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus .e1ej5pcd2,
.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-p9r4bv-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-p9r4bv-StyledTabButton-StyledMenu .e12ogfvr1 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-p9r4bv-StyledTabButton-StyledMenu[aria-expanded='true'] .e12ogfvr1 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-udlih-StyledIcon-sizeStyles-ArrowIcon {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-udlih-StyledIcon-sizeStyles-ArrowIcon.cache-udlih-StyledIcon-sizeStyles-ArrowIcon {
  vertical-align: middle;
}

<div
    class="cache-j9vddm-TabsContainer e1h41e5k0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      Second
    </button>
    <button
      aria-disabled="false"
      aria-label="2"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      Very long tab name
    </button>
    <button
      aria-controls="test"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="cache-p9r4bv-StyledTabButton-StyledMenu e12ogfvr0"
      role="tab"
      type="button"
    >
      More
      <svg
        class="e12ogfvr1 etwatq50 cache-udlih-StyledIcon-sizeStyles-ArrowIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 16.5a1.58 1.58 0 0 1-1.116-.458l-5.921-5.87a1.556 1.556 0 0 1 0-2.213 1.588 1.588 0 0 1 2.232 0L12 12.722l4.804-4.763a1.59 1.59 0 0 1 2.234 0 1.557 1.557 0 0 1 0 2.213l-5.921 5.87A1.584 1.584 0 0 1 12 16.5"
        />
      </svg>
    </button>
    <button
      aria-controls="menu"
      aria-disabled="true"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="cache-p9r4bv-StyledTabButton-StyledMenu e12ogfvr0"
      disabled=""
      role="tab"
      type="button"
    >
      More again
      <svg
        class="e12ogfvr1 etwatq50 cache-udlih-StyledIcon-sizeStyles-ArrowIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 16.5a1.58 1.58 0 0 1-1.116-.458l-5.921-5.87a1.556 1.556 0 0 1 0-2.213 1.588 1.588 0 0 1 2.232 0L12 12.722l4.804-4.763a1.59 1.59 0 0 1 2.234 0 1.557 1.557 0 0 1 0 2.213l-5.921 5.87A1.584 1.584 0 0 1 12 16.5"
        />
      </svg>
    </button>
  </div>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:hover,
.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:hover,
.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:focus {
  color: #390171;
}

.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:hover svg,
.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem[aria-selected='true'] {
  color: #390171;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem:hover,
.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem:hover,
.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem:focus {
  color: #390171;
}

.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem:hover svg,
.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem:hover,
.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem:focus {
  color: #4a4f62;
  background-color: #ffffff;
}

.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem:hover svg,
.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem:focus svg {
  fill: #4a4f62;
}

.cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem[aria-selected='true'] {
  color: #390171;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      id="test"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
        role="menu"
      >
        <button
          aria-disabled="false"
          aria-selected="false"
          class="ej1y0fv0 em6gco80 cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Test
          </div>
        </button>
        <button
          aria-disabled="true"
          aria-selected="false"
          class="ej1y0fv0 em6gco80 cache-1k1zpex-StyledButton-item-disabled-Item-StyledMenuItem"
          disabled=""
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Test
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="ej1y0fv0 em6gco80 cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Test
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="true"
          class="ej1y0fv0 em6gco80 cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Test 2
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="ej1y0fv0 em6gco80 cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Test 2
          </div>
        </button>
      </div>
    </div>
  </div>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      hidden=""
      id="menu"
      role="dialog"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs name 1`] = `
<DocumentFragment>
  .cache-j9vddm-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
}

.cache-j9vddm-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d4dae7;
}

.cache-1uai6yj-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #b2b6c3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-case: none;
}

.cache-1uai6yj-StyledTabButton:hover,
.cache-1uai6yj-StyledTabButton:active,
.cache-1uai6yj-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1uai6yj-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1uai6yj-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1uai6yj-StyledTabButton[aria-selected='true'] .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd2,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd2,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='true'],
.cache-1uai6yj-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-j9vddm-TabsContainer e1h41e5k0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-label="first"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="second"
      aria-selected="true"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      Second
    </button>
    <button
      aria-disabled="true"
      aria-label="three"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      disabled=""
      role="tab"
    >
      Very long tab name
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs with prop 1`] = `
<DocumentFragment>
  .cache-j9vddm-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
}

.cache-j9vddm-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d4dae7;
}

.cache-1uai6yj-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #b2b6c3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-case: none;
}

.cache-1uai6yj-StyledTabButton:hover,
.cache-1uai6yj-StyledTabButton:active,
.cache-1uai6yj-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1uai6yj-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1uai6yj-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1uai6yj-StyledTabButton[aria-selected='true'] .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd2,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd2,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='true'],
.cache-1uai6yj-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1l5bbhh-StyledText-StyledCounter {
  color: #4a4f62;
  font-size: 12px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  border-radius: 50%;
  background-color: #f6f6f8;
  border: 1px solid #d4dae7;
  margin-left: 8px;
  height: 24px;
  width: 24px;
  line-height: 22px;
}

.cache-1hjfwlj-BadgeContainer {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-p9r4bv-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #b2b6c3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-case: none;
}

.cache-p9r4bv-StyledTabButton-StyledMenu:hover,
.cache-p9r4bv-StyledTabButton-StyledMenu:active,
.cache-p9r4bv-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-p9r4bv-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-p9r4bv-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-p9r4bv-StyledTabButton-StyledMenu[aria-selected='true'] .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover .e1ej5pcd2,
.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus .e1ej5pcd2,
.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-p9r4bv-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-p9r4bv-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-p9r4bv-StyledTabButton-StyledMenu .e12ogfvr1 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-p9r4bv-StyledTabButton-StyledMenu[aria-expanded='true'] .e12ogfvr1 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-udlih-StyledIcon-sizeStyles-ArrowIcon {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-udlih-StyledIcon-sizeStyles-ArrowIcon.cache-udlih-StyledIcon-sizeStyles-ArrowIcon {
  vertical-align: middle;
}

<div
    class="cache-j9vddm-TabsContainer e1h41e5k0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="true"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      First
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      Second
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      Undefined
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      Counter
      <span
        class="e1ej5pcd2 cache-1l5bbhh-StyledText-StyledCounter e1tg3t120"
      >
        12
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      Conter and badge
      <span
        class="e1ej5pcd2 cache-1l5bbhh-StyledText-StyledCounter e1tg3t120"
      >
        12
      </span>
      <span
        class="cache-1hjfwlj-BadgeContainer e1ej5pcd1"
      >
        Badge
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      Badge
      <span
        class="cache-1hjfwlj-BadgeContainer e1ej5pcd1"
      >
        Badge
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      Very long tab name
    </button>
    <button
      aria-controls="test"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="cache-p9r4bv-StyledTabButton-StyledMenu e12ogfvr0"
      role="tab"
      type="button"
    >
      More
      <svg
        class="e12ogfvr1 etwatq50 cache-udlih-StyledIcon-sizeStyles-ArrowIcon"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 16.5a1.58 1.58 0 0 1-1.116-.458l-5.921-5.87a1.556 1.556 0 0 1 0-2.213 1.588 1.588 0 0 1 2.232 0L12 12.722l4.804-4.763a1.59 1.59 0 0 1 2.234 0 1.557 1.557 0 0 1 0 2.213l-5.921 5.87A1.584 1.584 0 0 1 12 16.5"
        />
      </svg>
    </button>
  </div>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:hover,
.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:hover,
.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:focus {
  color: #390171;
}

.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:hover svg,
.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem[aria-selected='true'] {
  color: #390171;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      id="test"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
        role="menu"
      >
        <button
          aria-disabled="false"
          aria-selected="false"
          class="ej1y0fv0 em6gco80 cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Test
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="ej1y0fv0 em6gco80 cache-1ukyjcz-StyledButton-item-Item-StyledMenuItem"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Test 2
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with custom Tabs component 1`] = `
<DocumentFragment>
  .cache-j9vddm-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
}

.cache-j9vddm-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d4dae7;
}

.cache-1uai6yj-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #b2b6c3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-case: none;
}

.cache-1uai6yj-StyledTabButton:hover,
.cache-1uai6yj-StyledTabButton:active,
.cache-1uai6yj-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1uai6yj-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1uai6yj-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1uai6yj-StyledTabButton[aria-selected='true'] .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd2,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd2,
.cache-1uai6yj-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-1uai6yj-StyledTabButton[aria-disabled='true'],
.cache-1uai6yj-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-jppxd4-StyledLink-StyledTabButton {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: #b2b6c3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d4dae7;
  outline: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-case: none;
}

.cache-jppxd4-StyledLink-StyledTabButton .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-jppxd4-StyledLink-StyledTabButton>* {
  pointer-events: none;
}

.cache-jppxd4-StyledLink-StyledTabButton:hover,
.cache-jppxd4-StyledLink-StyledTabButton:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-jppxd4-StyledLink-StyledTabButton:hover .e4bq1r52,
.cache-jppxd4-StyledLink-StyledTabButton:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-jppxd4-StyledLink-StyledTabButton:hover::after,
.cache-jppxd4-StyledLink-StyledTabButton:focus::after {
  background-color: #390171;
}

.cache-jppxd4-StyledLink-StyledTabButton:active {
  text-decoration-thickness: 2px;
}

.cache-jppxd4-StyledLink-StyledTabButton:hover,
.cache-jppxd4-StyledLink-StyledTabButton:active,
.cache-jppxd4-StyledLink-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-jppxd4-StyledLink-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-jppxd4-StyledLink-StyledTabButton[aria-selected='true'] {
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-jppxd4-StyledLink-StyledTabButton[aria-selected='true'] .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-jppxd4-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-jppxd4-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-jppxd4-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #390171;
  border-bottom-color: #4f0599;
}

.cache-jppxd4-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):hover .e1ej5pcd2,
.cache-jppxd4-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):focus .e1ej5pcd2,
.cache-jppxd4-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):active .e1ej5pcd2 {
  background-color: #eeeeff;
  border-color: #eeeeff;
}

.cache-jppxd4-StyledLink-StyledTabButton[aria-disabled='true'],
.cache-jppxd4-StyledLink-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-j9vddm-TabsContainer e1h41e5k0"
    role="tablist"
  >
    <div
      aria-disabled="false"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      First
    </div>
    <a
      aria-disabled="false"
      aria-selected="false"
      class="cache-1uai6yj-StyledTabButton e1ej5pcd0"
      role="tab"
    >
      Second
    </a>
    <a
      class="e1ej5pcd0 cache-jppxd4-StyledLink-StyledTabButton e4bq1r50"
      href="#"
    >
      Very long tab name
    </a>
  </div>
</DocumentFragment>
`;
